# fastapi-simple-template

./: .dockerignore  .env.pytest  .gitignore  .pylintrc  404.html  Dockerfile  README.md  alembic.ini  index.html  mkdocs.yml  nginx.conf  pyproject.toml  sample.env  test.env
.github/workflows/: mkdocs.yml  test.yml
app/: config.py  main.py  static.py
app/api/: __init__.py  depends.py  schema.py
app/api/endpoints/: __init__.py  api_key.py  auth.py  health.py  oauth_providers.py  users.py
app/api/endpoints/v1/: __init__.py  api_key.py  auth.py  health.py  oauth.py  oauth_providers.py  users.py
app/api/middlewares/: __init__.py  auth.py  db.py  http_session.py
app/api/middlewares/auth/: __init__.py  api_key.py  auth_user.py  base.py  basic.py  cookie.py  session.py  token.py
app/cli/: echo.py  init_user.py  main.py
app/controllers/: auth.py  base.py  user.py
app/db/: __init__.py  models.py  session.py
app/db/dao/: __init__.py  api_key.py  base.py  external_user.py  oauth_provider.py  user.py
app/db/migrations/: env.py  script.py.mako
app/db/migrations/versions/: 10ac93d61cdb_init_tables.py  303b5cdcd9b5_init_tables.py  303b5cdcd9b5_init_user.py  39494dd329b6_init_tables.py  4703adcde28d_add_user.py  5db273b9b2ac_init_db.py  9585fefa87dc_init_tables.py
app/db/models/: __init__.py  api_key.py  base.py  external_user.py  oauth_provider.py  user.py
app/integration/oauth/: keycloak.py  provider.py  wechat.py
app/utils/: security.py
docs/: depends.md  how-to.md  index.md  test.md
docs/how-to/: database.md  documentation.md  test.md
docs/tutorials/: get-started.md  setup.md
how-to/database/: index.html
how-to/documentation/: index.html
how-to/test/: index.html
scripts/: prepare.sh
search/: search_index.json
tests/: conftest.py  test_api.py  test_auth.py  test_controller.py  test_dao.py  test_oauth_provider.py  test_utils_security.py
tests/api/: conftest.py
tests/api/endpoints/: test_api_key.py  test_auth.py  test_health.py  test_oauth.py  test_oauth_provider.py  test_user.py
tests/db/dao/: test_dao.py
tests/db/models/: test_base.py  test_models.py  test_user.py
tests/utils/: test_security.py
tutorials/get-started/: index.html
web/: README.MD  package.json  pnpm-lock.yaml
web/src/app/: layout.tsx
