[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI Application"
authors = ["Author <author@email.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.1"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
pylint = "^3.2.3"
mkdocs-material = "^9.5.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = 1
asyncio_mode = 'auto'
addopts = "--cov=app --cov-report html:tests_output"
