[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI Application"
authors = ["Author <author@email.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.1"
fastapi = "0.111.0"
pydantic-settings = "^2.3.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.2.0"
pyjwt = "^2.8.0"
bcrypt = "4.0.1"
alembic-postgresql-enum = "^1.3.0"
asyncpg = "^0.29.0"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
pylint = "^3.2.3"
mkdocs-material = "^9.5.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = 'info'
asyncio_mode = 'auto'
addopts = "--cov=app --cov-report html:cover"
