[project]
name = "fastapi-simple-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic-postgresql-enum>=1.8.0",
    "asyncpg>=0.30.0",
    "authlib>=1.6.5",
    "fastapi[standard]>=0.121.3",
    "itsdangerous>=2.2.0",
    "pgvector>=0.4.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mkdocs-material>=9.7.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = 'info'
asyncio_mode = 'auto'
addopts = "--cov=app --cov-report html:cover"
